1999-08-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/chg-chs.sh.in (changerdev): Pass it as -f flag to CHS.
	* docs/TAPE.CHANGERS: Document it.
	Reported by Mike Horansky <moho@stanford.EDU>

	* server-src/conffile.c (read_dumptype): Renamed from get_dumptype.
	Extended to support reading a named dumptype from a specified FILE.
	(get_dumptype): Use read_dumptype.
	(main): Read disklist, so that custom dumptypes are shown.
	* server-src/conffile.h (read_dumptype): Declare.
	* server-src/diskfile.c (parse_diskline): Get line_num and line by
	reference.  New argument diskf.  Use read_dumptype if dumptype
	starts with `{'.
	(main): Update.
	* man/amanda.8.in (disklist): Document it.
	* NEWS: Likewise.
	* example/disklist: Exemplify it.

1999-08-23 John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c (copy_template_file): make sure all data is
	  written to label template pipeline.

1999-08-16  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* common-src/Makefile.am: Replace .o with OBJEXT.  List sources
	explicitly, instead of LDADDing the corresponding objects.
	(OBJ_EXTENSION): Wipe out, use OBJEXT.

	* configure.in: Call AC_OBJEXT.
	(LTLIBOBJS, LTALLOCA): Define, according to ac_objext.
	* common-src/Makefile.am (libamanda_la_LIBADD): Use them.
	(libamanda_a_LIBADD): Use LIBOBJS and ALLOCA.

	* common-src/Makefile.am (genversion.o): Revert last change, it was
	just a bug in automake's --disable-dependency-tracking.

1999-08-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* README (platforms): Added OpenBSD.
	Reported by Ian Darwin <ian@sq.com>
	(platforms): Added SunOS 5.7.

1999-08-15  Derek Ney <derek@hipgraphics.com>, Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendsize.c (SAMBA_DEBUG_LEVEL): New macro, "0" for
	Samba >= 2, "3" for older ones.
	(getsize_smbtar): Use `du' if SAMBA_VERSION >= 2, and the
	appropriate SAMBA_DEBUG_LEVEL.

1999-08-15  Alexandre Oliva  <oliva@dcc.unicamp.br>
